# ARDraft

./: .gitignore  README.md
AndroidProj/: local.properties
AndroidProj/app/: CMakeLists.txt
AndroidProj/app/src/androidTest/java/lapras/orb_android/: ExampleInstrumentedTest.java
AndroidProj/app/src/main/: AndroidManifest.xml
AndroidProj/app/src/main/assets/calvrAssets/: SamsungS9Calib.yaml
AndroidProj/app/src/main/assets/shaders/: screenquad.frag  screenquad.vert
AndroidProj/app/src/main/cpp/: AndroidHelper.cpp  AndroidHelper.h  allController.cpp  allController.h  jni_interface.cpp  jni_interface.h
AndroidProj/app/src/main/cpp/ORB/include/: Frame.h  Initializer.h  LoopClosing.h  MapDrawer.h  Optimizer.h  PnPsolver.h  System.h  Tracking.h  Viewer.h
AndroidProj/app/src/main/cpp/ORB/src/: Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  ORBmatcher.cc  Optimizer.cc  Sim3Solver.cc  System.cc  Tracking.cc
AndroidProj/app/src/main/java/lapras/orb_android/: BackgroundRenderer.java  CVandCGJavaCamera2View.java  CVandCGViewBase.java  CameraPermissionHelper.java  JniInterface.java  MainActivity.java  ShaderUtil.java  fileUtils.java
AndroidProj/app/src/main/java/lapras/orb_android/GLRender/: Cube.java  MatrixState.java  ShaderHelper.java  TextResourceReader.java
AndroidProj/app/src/main/res/layout/: activity_main.xml
AndroidProj/app/src/main/res/raw/: simple_vertex_shader.glsl  vertex_shader_ball.glsl
AndroidProj/app/src/main/res/values/: strings.xml  styles.xml
AndroidProj/app/src/test/java/lapras/orb_android/: ExampleUnitTest.java
AndroidProj/gradle/wrapper/: gradle-wrapper.properties
